# Photivo_Plus_Plus

./: CMakeLists.txt  COPYING.3rd.party  README.md  cmake_uninstall.cmake.in
ReferenceMaterial/SimpleNikonCurve/: Compile
ReferenceMaterial/new-style filter template/: ptFilter_FilterName.cpp  ptFilter_FilterName.h
Sources/: ptCheck.cpp  ptChoice.cpp  ptClear.cpp  ptColorSelectButton.cpp  ptConstants.h  ptCurve.cpp  ptCurveWindow.cpp  ptDcRaw.cpp  ptDcRaw.h  ptDefines.h  ptGimp.cpp  ptGroupBox.cpp  ptHistogramWindow.cpp  ptImage.cpp  ptImageHelper.cpp  ptImage_DRC.cpp  ptImage_EAW.cpp  ptInfo.cpp  ptInfo.h  ptInput.cpp  ptMain.cpp  ptMainWindow.cpp  ptMainWindow.h  ptMainWindow.ui  ptProcessor.cpp  ptProcessor.h  ptSettings.cpp  ptSlider.cpp  ptTempFilterBase.h  ptTheme.cpp  ptToolBox.cpp  ptViewWindow.cpp  ptViewWindow.h
Sources/batch/: ptBatchWindow.cpp  ptJobListModel.cpp
Sources/filemgmt/: ptFileMgrDM.cpp  ptFileMgrWindow.cpp  ptFileMgrWindow.h  ptImageView.cpp  ptPathBar.cpp  ptSingleDirModel.cpp  ptThumbCache.cpp  ptThumbCache.h  ptThumbGenHelpers.cpp  ptThumbGenHelpers.h  ptThumbGenMgr.cpp  ptThumbGenWorker.cpp
Sources/filters/: ptCfgItem.cpp  ptFilterBase.cpp  ptFilterConfig.cpp  ptFilterDM.cpp  ptFilterFactory.cpp  ptFilter_BlackWhite.cpp  ptFilter_Brightness.cpp  ptFilter_ColorBoost.cpp  ptFilter_ColorEnhancement.cpp  ptFilter_ColorIntensity.cpp  ptFilter_ColorTone.cpp  ptFilter_CrossProcessing.cpp  ptFilter_Drc.cpp  ptFilter_Exposure.cpp  ptFilter_FilmGrain.cpp  ptFilter_GradualBlur.cpp  ptFilter_GradualOverlay.cpp  ptFilter_LMHRecovery.cpp  ptFilter_LabTransform.cpp  ptFilter_Levels.cpp  ptFilter_LocalContrast.cpp  ptFilter_LocalContrastStretch.cpp  ptFilter_LumaSatAdjust.cpp  ptFilter_Normalization.cpp  ptFilter_ReinhardBrighten.cpp  ptFilter_Saturation.cpp  ptFilter_SimpleTone.cpp  ptFilter_SoftglowOrton.cpp  ptFilter_TextureContrast.cpp  ptFilter_TextureOverlay.cpp  ptFilter_Tone.cpp  ptFilter_ViewLab.cpp  ptFilter_Vignette.cpp
Sources/filters/imagespot/: ptFilter_SpotTuning.cpp  ptImageSpot.cpp  ptImageSpotList.cpp  ptTuningSpot.cpp
Sources/qtsingleapplication/: qtlocalpeer.cpp
Translations/: photivo_Czech.qm  photivo_Czech.ts  photivo_Danish.qm  photivo_Danish.ts  photivo_Dutch.qm  photivo_Dutch.ts  photivo_French.qm  photivo_French.ts  photivo_German.qm  photivo_German.ts  photivo_Italian.qm  photivo_Italian.ts  photivo_Polish.qm  photivo_Polish.ts  photivo_Russian.qm  photivo_Russian.ts  photivo_Spanish.qm  photivo_Spanish.ts
apps/photivo/: CMakeLists.txt  winres.rc
apps/photivo-to-gimp-plugin/: CMakeLists.txt
apps/ptClear/: CMakeLists.txt
apps/ptCreateAdobeProfiles/: CMakeLists.txt
