pt_add_executable(photivo WIN32
    # source code
    ../../Sources/batch/ptBatchWindow.cpp
    ../../Sources/batch/ptBatchWindow.h
    ../../Sources/batch/ptJobListItem.cpp
    ../../Sources/batch/ptJobListItem.h
    ../../Sources/batch/ptJobListModel.cpp
    ../../Sources/batch/ptJobListModel.h
    ../../Sources/fastbilateral/array.h
    ../../Sources/fastbilateral/array_n.h
    ../../Sources/fastbilateral/chrono.h
    ../../Sources/fastbilateral/fast_lbf.h
    ../../Sources/fastbilateral/geom.h
    ../../Sources/fastbilateral/math_tools.h
    ../../Sources/fastbilateral/mixed_vector.h
    ../../Sources/fastbilateral/msg_stream.h
    ../../Sources/filemgmt/ptAbstractThumbnailLayouter.h
    ../../Sources/filemgmt/ptColumnGridThumbnailLayouter.cpp
    ../../Sources/filemgmt/ptColumnGridThumbnailLayouter.h
    ../../Sources/filemgmt/ptFileMgrConstants.h
    ../../Sources/filemgmt/ptFileMgrDM.cpp
    ../../Sources/filemgmt/ptFileMgrDM.h
    ../../Sources/filemgmt/ptFileMgrWindow.cpp
    ../../Sources/filemgmt/ptFileMgrWindow.h
    ../../Sources/filemgmt/ptGraphicsSceneEmitter.cpp
    ../../Sources/filemgmt/ptGraphicsSceneEmitter.h
    ../../Sources/filemgmt/ptGraphicsThumbGroup.cpp
    ../../Sources/filemgmt/ptGraphicsThumbGroup.h
    ../../Sources/filemgmt/ptGridThumbnailLayouter.cpp
    ../../Sources/filemgmt/ptGridThumbnailLayouter.h
    ../../Sources/filemgmt/ptImageView.cpp
    ../../Sources/filemgmt/ptImageView.h
    ../../Sources/filemgmt/ptPathBar.cpp
    ../../Sources/filemgmt/ptPathBar.h
    ../../Sources/filemgmt/ptRowGridThumbnailLayouter.cpp
    ../../Sources/filemgmt/ptRowGridThumbnailLayouter.h
    ../../Sources/filemgmt/ptSingleDirModel.cpp
    ../../Sources/filemgmt/ptSingleDirModel.h
    ../../Sources/filemgmt/ptTagList.cpp
    ../../Sources/filemgmt/ptTagList.h
    ../../Sources/filemgmt/ptTagModel.cpp
    ../../Sources/filemgmt/ptTagModel.h
    ../../Sources/filemgmt/ptThumbCache.cpp
    ../../Sources/filemgmt/ptThumbCache.h
    ../../Sources/filemgmt/ptThumbDefines.cpp
    ../../Sources/filemgmt/ptThumbDefines.h
    ../../Sources/filemgmt/ptThumbGenHelpers.cpp
    ../../Sources/filemgmt/ptThumbGenHelpers.h
    ../../Sources/filemgmt/ptThumbGenMgr.cpp
    ../../Sources/filemgmt/ptThumbGenMgr.h
    ../../Sources/filemgmt/ptThumbGenWorker.cpp
    ../../Sources/filemgmt/ptThumbGenWorker.h
    ../../Sources/filters/imagespot/ptFilter_SpotTuning.cpp
    ../../Sources/filters/imagespot/ptFilter_SpotTuning.h
    ../../Sources/filters/imagespot/ptImageSpot.cpp
    ../../Sources/filters/imagespot/ptImageSpot.h
    ../../Sources/filters/imagespot/ptImageSpotEditor.cpp
    ../../Sources/filters/imagespot/ptImageSpotEditor.h
    ../../Sources/filters/imagespot/ptImageSpotItemDelegate.cpp
    ../../Sources/filters/imagespot/ptImageSpotItemDelegate.h
    ../../Sources/filters/imagespot/ptImageSpotList.cpp
    ../../Sources/filters/imagespot/ptImageSpotList.h
    ../../Sources/filters/imagespot/ptImageSpotModel.cpp
    ../../Sources/filters/imagespot/ptImageSpotModel.h
    ../../Sources/filters/imagespot/ptSpotInteraction.cpp
    ../../Sources/filters/imagespot/ptSpotInteraction.h
    ../../Sources/filters/imagespot/ptSpotListWidget.cpp
    ../../Sources/filters/imagespot/ptSpotListWidget.h
    ../../Sources/filters/imagespot/ptTuningSpot.cpp
    ../../Sources/filters/imagespot/ptTuningSpot.h
    ../../Sources/filters/ptCfgItem.cpp
    ../../Sources/filters/ptCfgItem.h
    ../../Sources/filters/ptFilterBase.cpp
    ../../Sources/filters/ptFilterBase.h
    ../../Sources/filters/ptFilterConfig.cpp
    ../../Sources/filters/ptFilterConfig.h
    ../../Sources/filters/ptFilterDM.cpp
    ../../Sources/filters/ptFilterDM.h
    ../../Sources/filters/ptFilterFactory.cpp
    ../../Sources/filters/ptFilterFactory.h
    ../../Sources/filters/ptFilterUids.h
    ../../Sources/filters/ptFilter_ABCurves.cpp
    ../../Sources/filters/ptFilter_ABCurves.h
    ../../Sources/filters/ptFilter_BlackWhite.cpp
    ../../Sources/filters/ptFilter_BlackWhite.h
    ../../Sources/filters/ptFilter_Brightness.cpp
    ../../Sources/filters/ptFilter_Brightness.h
    ../../Sources/filters/ptFilter_ChannelMixer.cpp
    ../../Sources/filters/ptFilter_ChannelMixer.h
    ../../Sources/filters/ptFilter_ColorBoost.cpp
    ../../Sources/filters/ptFilter_ColorBoost.h
    ../../Sources/filters/ptFilter_ColorContrast.cpp
    ../../Sources/filters/ptFilter_ColorContrast.h
    ../../Sources/filters/ptFilter_ColorDenoise.cpp
    ../../Sources/filters/ptFilter_ColorDenoise.h
    ../../Sources/filters/ptFilter_ColorEnhancement.cpp
    ../../Sources/filters/ptFilter_ColorEnhancement.h
    ../../Sources/filters/ptFilter_ColorIntensity.cpp
    ../../Sources/filters/ptFilter_ColorIntensity.h
    ../../Sources/filters/ptFilter_ColorTone.cpp
    ../../Sources/filters/ptFilter_ColorTone.h
    ../../Sources/filters/ptFilter_CrossProcessing.cpp
    ../../Sources/filters/ptFilter_CrossProcessing.h
    ../../Sources/filters/ptFilter_Defringe.cpp
    ../../Sources/filters/ptFilter_Defringe.h
    ../../Sources/filters/ptFilter_DetailCurve.cpp
    ../../Sources/filters/ptFilter_DetailCurve.h
    ../../Sources/filters/ptFilter_Drc.cpp
    ../../Sources/filters/ptFilter_Drc.h
    ../../Sources/filters/ptFilter_EAWavelets.cpp
    ../../Sources/filters/ptFilter_EAWavelets.h
    ../../Sources/filters/ptFilter_Exposure.cpp
    ../../Sources/filters/ptFilter_Exposure.h
    ../../Sources/filters/ptFilter_FilmGrain.cpp
    ../../Sources/filters/ptFilter_FilmGrain.h
    ../../Sources/filters/ptFilter_GammaTool.cpp
    ../../Sources/filters/ptFilter_GammaTool.h
    ../../Sources/filters/ptFilter_GradientSharpen.cpp
    ../../Sources/filters/ptFilter_GradientSharpen.h
    ../../Sources/filters/ptFilter_GradualBlur.cpp
    ../../Sources/filters/ptFilter_GradualBlur.h
    ../../Sources/filters/ptFilter_GradualOverlay.cpp
    ../../Sources/filters/ptFilter_GradualOverlay.h
    ../../Sources/filters/ptFilter_GreyCStoration.cpp
    ../../Sources/filters/ptFilter_GreyCStoration.h
    ../../Sources/filters/ptFilter_Highlights.cpp
    ../../Sources/filters/ptFilter_Highlights.h
    ../../Sources/filters/ptFilter_HighpassSharpen.cpp
    ../../Sources/filters/ptFilter_HighpassSharpen.h
    ../../Sources/filters/ptFilter_ImpulseNR.cpp
    ../../Sources/filters/ptFilter_ImpulseNR.h
    ../../Sources/filters/ptFilter_InvDiffSharpen.cpp
    ../../Sources/filters/ptFilter_InvDiffSharpen.h
    ../../Sources/filters/ptFilter_LMHRecovery.cpp
    ../../Sources/filters/ptFilter_LMHRecovery.h
    ../../Sources/filters/ptFilter_LabTransform.cpp
    ../../Sources/filters/ptFilter_LabTransform.h
    ../../Sources/filters/ptFilter_Levels.cpp
    ../../Sources/filters/ptFilter_Levels.h
    ../../Sources/filters/ptFilter_LocalContrast.cpp
    ../../Sources/filters/ptFilter_LocalContrast.h
    ../../Sources/filters/ptFilter_LocalContrastStretch.cpp
    ../../Sources/filters/ptFilter_LocalContrastStretch.h
    ../../Sources/filters/ptFilter_LumaDenoise.cpp
    ../../Sources/filters/ptFilter_LumaDenoise.h
    ../../Sources/filters/ptFilter_LumaDenoiseCurve.cpp
    ../../Sources/filters/ptFilter_LumaDenoiseCurve.h
    ../../Sources/filters/ptFilter_LumaSatAdjust.cpp
    ../../Sources/filters/ptFilter_LumaSatAdjust.h
    ../../Sources/filters/ptFilter_Normalization.cpp
    ../../Sources/filters/ptFilter_Normalization.h
    ../../Sources/filters/ptFilter_Outline.cpp
    ../../Sources/filters/ptFilter_Outline.h
    ../../Sources/filters/ptFilter_PyramidDenoise.cpp
    ../../Sources/filters/ptFilter_PyramidDenoise.h
    ../../Sources/filters/ptFilter_ReinhardBrighten.cpp
    ../../Sources/filters/ptFilter_ReinhardBrighten.h
    ../../Sources/filters/ptFilter_SatCurve.cpp
    ../../Sources/filters/ptFilter_SatCurve.h
    ../../Sources/filters/ptFilter_Saturation.cpp
    ../../Sources/filters/ptFilter_Saturation.h
    ../../Sources/filters/ptFilter_ShadowsHighlights.cpp
    ../../Sources/filters/ptFilter_ShadowsHighlights.h
    ../../Sources/filters/ptFilter_SigContrast.cpp
    ../../Sources/filters/ptFilter_SigContrast.h
    ../../Sources/filters/ptFilter_SimpleTone.cpp
    ../../Sources/filters/ptFilter_SimpleTone.h
    ../../Sources/filters/ptFilter_SoftglowOrton.cpp
    ../../Sources/filters/ptFilter_SoftglowOrton.h
    ../../Sources/filters/ptFilter_StdCurve.cpp
    ../../Sources/filters/ptFilter_StdCurve.h
    ../../Sources/filters/ptFilter_TextureContrast.cpp
    ../../Sources/filters/ptFilter_TextureContrast.h
    ../../Sources/filters/ptFilter_TextureOverlay.cpp
    ../../Sources/filters/ptFilter_TextureOverlay.h
    ../../Sources/filters/ptFilter_Tone.cpp
    ../../Sources/filters/ptFilter_Tone.h
    ../../Sources/filters/ptFilter_ToneAdjust.cpp
    ../../Sources/filters/ptFilter_ToneAdjust.h
    ../../Sources/filters/ptFilter_UnsharpMask.cpp
    ../../Sources/filters/ptFilter_UnsharpMask.h
    ../../Sources/filters/ptFilter_ViewLab.cpp
    ../../Sources/filters/ptFilter_ViewLab.h
    ../../Sources/filters/ptFilter_Vignette.cpp
    ../../Sources/filters/ptFilter_Vignette.h
    ../../Sources/filters/ptFilter_WaveletDenoise.cpp
    ../../Sources/filters/ptFilter_WaveletDenoise.h
    ../../Sources/filters/ptFilter_Wiener.cpp
    ../../Sources/filters/ptFilter_Wiener.h
    ../../Sources/greyc/CImg.h
    ../../Sources/ptAbstractInteraction.cpp
    ../../Sources/ptAbstractInteraction.h
    ../../Sources/ptCalloc.cpp
    ../../Sources/ptCalloc.h
    ../../Sources/ptCheck.cpp
    ../../Sources/ptCheck.h
    ../../Sources/ptChoice.cpp
    ../../Sources/ptChoice.h
    ../../Sources/ptCimg.cpp
    ../../Sources/ptCimg.h
    ../../Sources/ptColorProfiles.h
    ../../Sources/ptColorSelectButton.cpp
    ../../Sources/ptColorSelectButton.h
    ../../Sources/ptConfirmRequest.cpp
    ../../Sources/ptConfirmRequest.h
    ../../Sources/ptConstants.h
    ../../Sources/ptCurve.cpp
    ../../Sources/ptCurve.h
    ../../Sources/ptCurveWindow.cpp
    ../../Sources/ptCurveWindow.h
    ../../Sources/ptDcRaw.cpp
    ../../Sources/ptDcRaw.h
    ../../Sources/ptDefines.h
    ../../Sources/ptError.cpp
    ../../Sources/ptError.h
    ../../Sources/ptGridInteraction.cpp
    ../../Sources/ptGridInteraction.h
    ../../Sources/ptGroupBox.cpp
    ../../Sources/ptGroupBox.h
    ../../Sources/ptGuiOptions.cpp
    ../../Sources/ptGuiOptions.h
    ../../Sources/ptHistogramWindow.cpp
    ../../Sources/ptHistogramWindow.h
    ../../Sources/ptImage.cpp
    ../../Sources/ptImage.h
    ../../Sources/ptImage8.cpp
    ../../Sources/ptImage8.h
    ../../Sources/ptImageHelper.cpp
    ../../Sources/ptImageHelper.h
    ../../Sources/ptImage_Cimg.cpp
    ../../Sources/ptImage_DRC.cpp
    ../../Sources/ptImage_EAW.cpp
    ../../Sources/ptImage_GM.cpp
    ../../Sources/ptImage_GMC.cpp
    ../../Sources/ptImage_Lensfun.cpp
    ../../Sources/ptImage_Lqr.cpp
    ../../Sources/ptImage_Pyramid.cpp
    ../../Sources/ptInfo.cpp
    ../../Sources/ptInfo.h
    ../../Sources/ptInput.cpp
    ../../Sources/ptInput.h
    ../../Sources/ptKernel.cpp
    ../../Sources/ptKernel.h
    ../../Sources/ptLensfun.cpp
    ../../Sources/ptLensfun.h
    ../../Sources/ptLineInteraction.cpp
    ../../Sources/ptLineInteraction.h
    ../../Sources/ptMain.cpp
    ../../Sources/ptMainWindow.cpp
    ../../Sources/ptMainWindow.h
    ../../Sources/ptMessageBox.cpp
    ../../Sources/ptMessageBox.h
    ../../Sources/ptMutexLocker.cpp
    ../../Sources/ptMutexLocker.h
    ../../Sources/ptParseCli.cpp
    ../../Sources/ptParseCli.h
    ../../Sources/ptProcessor.cpp
    ../../Sources/ptProcessor.h
    ../../Sources/ptRGBTemperature.cpp
    ../../Sources/ptRGBTemperature.h
    ../../Sources/ptRawWrapper.cpp
    ../../Sources/ptRawWrapper.h
    ../../Sources/ptReportOverlay.cpp
    ../../Sources/ptReportOverlay.h
    ../../Sources/ptResizeFilters.cpp
    ../../Sources/ptResizeFilters.h
    ../../Sources/ptRichRectInteraction.cpp
    ../../Sources/ptRichRectInteraction.h
    ../../Sources/ptSettings.cpp
    ../../Sources/ptSettings.h
    ../../Sources/ptSimpleRectInteraction.cpp
    ../../Sources/ptSimpleRectInteraction.h
    ../../Sources/ptSlider.cpp
    ../../Sources/ptSlider.h
    ../../Sources/ptStorable.cpp
    ../../Sources/ptStorable.h
    ../../Sources/ptTempFile.cpp
    ../../Sources/ptTempFile.h
    ../../Sources/ptTempFilterBase.cpp
    ../../Sources/ptTempFilterBase.h
    ../../Sources/ptTheme.cpp
    ../../Sources/ptTheme.h
    ../../Sources/ptToolBox.cpp
    ../../Sources/ptToolBox.h
    ../../Sources/ptUtils.cpp
    ../../Sources/ptUtils.h
    ../../Sources/ptUtils_Storage.cpp
    ../../Sources/ptUtils_Storage.h
    ../../Sources/ptViewWindow.cpp
    ../../Sources/ptViewWindow.h
    ../../Sources/ptVisibleToolsView.cpp
    ../../Sources/ptVisibleToolsView.h
    ../../Sources/ptWhiteBalances.cpp
    ../../Sources/ptWhiteBalances.h
    ../../Sources/ptWidget.cpp
    ../../Sources/ptWidget.h
    ../../Sources/ptWiener.cpp
    ../../Sources/ptWiener.h
    ../../Sources/qtsingleapplication/qtlocalpeer.cpp
    ../../Sources/qtsingleapplication/qtlocalpeer.h
    ../../Sources/qtsingleapplication/qtlockedfile.h
    ../../Sources/qtsingleapplication/qtsingleapplication.cpp
    ../../Sources/qtsingleapplication/qtsingleapplication.h
    ../../Sources/tools/finally.h

    # Qt designer forms
    ../../Sources/batch/ptBatchWindow.ui
    ../../Sources/filemgmt/ptFileMgrWindow.ui
    ../../Sources/filters/imagespot/ptFilter_SpotTuning.ui
    ../../Sources/filters/imagespot/ptSpotListWidget.ui
    ../../Sources/filters/ptFilter_ColorIntensity.ui
    ../../Sources/filters/ptFilter_LMHRecovery.ui
    ../../Sources/filters/ptFilter_Outline.ui
    ../../Sources/filters/ptFilter_Tone.ui
    ../../Sources/filters/ptFilter_Wiener.ui
    ../../Sources/filters/ptFilter_ChannelMixer.ui
    ../../Sources/filters/ptFilter_GradientSharpen.ui
    ../../Sources/filters/ptFilter_EAWavelets.ui
    ../../Sources/filters/ptFilter_GreyCStoration.ui
    ../../Sources/filters/ptFilter_Defringe.ui
    ../../Sources/filters/ptFilter_WaveletDenoise.ui
    ../../Sources/filters/ptFilter_InvDiffSharpen.ui
    ../../Sources/filters/ptFilter_FilmGrain.ui
    ../../Sources/filters/ptFilter_Vignette.ui
    ../../Sources/filters/ptFilter_GradualBlur.ui
    ../../Sources/filters/ptFilter_Exposure.ui
    ../../Sources/filters/ptFilter_BlackWhite.ui
    ../../Sources/filters/ptFilter_ColorTone.ui
    ../../Sources/filters/ptFilter_GradualOverlay.ui
    ../../Sources/filters/ptFilter_TextureOverlay.ui
    ../../Sources/ptMainWindow.ui

    # Qt resources
    ../../qrc/photivo.qrc
)
if (WIN32)
    target_sources(photivo PRIVATE
        ../../Sources/ptEcWin7.cpp
        ../../Sources/ptEcWin7.h
        ../../Sources/ptWinApi.cpp
        ../../Sources/ptWinApi.h
        winres.rc
    )

    target_compile_definitions(photivo PRIVATE
        WIN32_LEAN_AND_MEAN
        _UNICODE
        UNICODE
    )

    target_link_libraries(photivo PRIVATE ole32 wsock32 gdi32)

    # windres.exe chokes on the APPVERSION define with its spaces and special characters.
    # Solution: Manually strip down the command line to what’s really needed.
    set(CMAKE_RC_COMPILE_OBJECT "<CMAKE_RC_COMPILER> -O coff -i <SOURCE> -o <OBJECT>")
endif()

target_link_libraries(photivo PRIVATE
    Qt${PT_QT_MAJOR_VERSION}::Network
    Qt${PT_QT_MAJOR_VERSION}::Widgets
    JPEG::JPEG
    PkgConfig::glib2
    PkgConfig::lcms2
    PkgConfig::exiv2
    PkgConfig::fftw3
    PkgConfig::lqr
    PkgConfig::lensfun
    PkgConfig::GraphicsMagick
    PkgConfig::GraphicsMagickWand
    PkgConfig::libraw

    # Assumes OpenMP setup is the same for C and C++. For the compilers we support that’s reasonable.
    OpenMP::OpenMP_CXX
)

target_compile_options(photivo PRIVATE
    -ffast-math
    $<$<CONFIG:Release>:-funroll-loops$<SEMICOLON>-ftree-vectorize>
)

target_compile_definitions(photivo PRIVATE
    "APPVERSION=${PT_VERSION}"
    "PREFIX=${CMAKE_INSTALL_PREFIX}"
)

if (WITH_SYSTEM_CIMG)
    target_compile_definitions(photivo PRIVATE SYSTEM_CIMG)
endif()

install(TARGETS photivo)
